add 10 more activities to each place

--- a/trip-schedule.html
+++ b/trip-schedule.html
@@ -696,6 +696,462 @@
     "Hanuman Ghat Spiritual Experience",
     "Nepali Temple Visit",
     "Ayurvedic Healing Session"
+  ],
+
+  // International trips 
+
+"Amsterdam": [
+    "Canal Cruise Tour",
+    "Visit Van Gogh Museum",
+    "Explore Anne Frank House",
+    "Bike Ride Around the City",
+    "Dam Square Walk",
+    "Heineken Experience",
+    "Vondelpark Picnic",
+    "Shopping at Jordaan District",
+    "Flower Market Visit",
+    "Day Trip to Zaanse Schans Windmills",
+    "Rijksmuseum Tour",
+    "A’DAM Lookout Experience",
+    "Artis Royal Zoo Visit",
+    "FOAM Photography Museum",
+    "Red Light District Walking Tour"
+],
+"Athens": [
+    "Acropolis Visit",
+    "Parthenon Tour",
+    "Plaka Neighborhood Walk",
+    "National Archaeological Museum",
+    "Mount Lycabettus View",
+    "Temple of Olympian Zeus",
+    "Panathenaic Stadium",
+    "Local Street Food Tour",
+    "Shopping at Monastiraki",
+    "Evening at Syntagma Square",
+    "Byzantine and Christian Museum",
+    "Athens Riviera Beach Day",
+    "Museum of Cycladic Art",
+    "Athens Central Market Tour",
+    "Stavros Niarchos Foundation Cultural Center"
+],
+"Bali": [
+    "Tanah Lot Temple Visit",
+    "Ubud Monkey Forest",
+    "Tegallalang Rice Terraces",
+    "Beach Day at Seminyak",
+    "Mount Batur Sunrise Trek",
+    "Uluwatu Temple Sunset",
+    "Water Sports at Nusa Dua",
+    "Balinese Spa Experience",
+    "Local Market Shopping",
+    "Traditional Dance Show",
+    "Sacred Monkey Forest Sanctuary",
+    "Goa Gajah Temple Visit",
+    "Rice Terrace Cycling Tour",
+    "Cooking Class with Locals",
+    "Kintamani Volcano Viewpoint"
+],
+"Bangkok": [
+    "Grand Palace Tour",
+    "Wat Arun Temple Visit",
+    "Chatuchak Weekend Market",
+    "Chao Phraya River Cruise",
+    "Street Food Tour",
+    "Floating Market Experience",
+    "MBK Shopping Mall",
+    "Jim Thompson House",
+    "Siam Paragon Shopping",
+    "Nightlife at Khao San Road",
+    "Erawan Shrine Visit",
+    "Asiatique Riverfront Night Market",
+    "Bangkok Art and Culture Centre",
+    "Lumphini Park Walk",
+    "Thai Cooking Class"
+],
+"Barcelona": [
+    "Sagrada Familia Tour",
+    "Park Güell Visit",
+    "La Rambla Street Walk",
+    "Gothic Quarter Exploration",
+    "Casa Batlló Tour",
+    "Camp Nou Stadium Visit",
+    "Magic Fountain Show",
+    "Beach Day at Barceloneta",
+    "Local Tapas Food Tour",
+    "Shopping at Passeig de Gràcia",
+    "Picasso Museum",
+    "Montjuïc Castle Visit",
+    "Poble Espanyol Cultural Village",
+    "Barcelona Aquarium",
+    "Tibidabo Amusement Park"
+],
+"Berlin": [
+    "Brandenburg Gate Visit",
+    "Berlin Wall Memorial",
+    "Reichstag Parliament Tour",
+    "Checkpoint Charlie Museum",
+    "Museum Island Tour",
+    "Berlin Cathedral Visit",
+    "East Side Gallery Walk",
+    "Tiergarten Park Stroll",
+    "Holocaust Memorial",
+    "Local Street Food Currywurst",
+    "Gendarmenmarkt Square",
+    "Topography of Terror Museum",
+    "Charlottenburg Palace",
+    "Berlin Zoo and Aquarium",
+    "Spree River Cruise"
+],
+"Cairo": [
+    "Pyramids of Giza Tour",
+    "Sphinx Visit",
+    "Egyptian Museum Exploration",
+    "Khan El Khalili Bazaar Shopping",
+    "Nile River Dinner Cruise",
+    "Citadel of Saladin",
+    "Mosque of Muhammad Ali",
+    "Coptic Cairo Visit",
+    "Pharaonic Village Tour",
+    "Local Street Food Experience",
+    "Al-Azhar Park Walk",
+    "Islamic Cairo Walking Tour",
+    "Sound and Light Show at Pyramids",
+    "Egyptian Opera House Event",
+    "Feluca Ride on Nile"
+],
+"Calgary": [
+    "Calgary Tower View",
+    "Heritage Park Historical Village",
+    "Calgary Zoo Visit",
+    "Prince’s Island Park Walk",
+    "Glenbow Museum Tour",
+    "Peace Bridge Stroll",
+    "Local Food Market",
+    "Day Trip to Banff",
+    "Shopping at Stephen Avenue",
+    "Canada Olympic Park Adventure",
+    "Bow River Kayaking",
+    "TELUS Spark Science Center",
+    "Calgary Stampede (Seasonal)",
+    "Devonian Gardens Visit",
+    "Fish Creek Provincial Park Hike"
+],
+"Cape Town": [
+    "Table Mountain Cable Car Ride",
+    "Robben Island Museum",
+    "Cape of Good Hope Tour",
+    "V&A Waterfront Shopping",
+    "Boulders Beach Penguins",
+    "Kirstenbosch Botanical Gardens",
+    "Local Wine Tour",
+    "Chapman’s Peak Drive",
+    "Bo-Kaap Colorful Houses",
+    "Surfing at Muizenberg Beach",
+    "Two Oceans Aquarium",
+    "Signal Hill Sunset View",
+    "District Six Museum Visit",
+    "Hout Bay Boat Tour",
+    "Lion’s Head Hike"
+],
+"Doha": [
+    "Museum of Islamic Art",
+    "Souq Waqif Market",
+    "The Pearl-Qatar Visit",
+    "Katara Cultural Village",
+    "Doha Corniche Walk",
+    "National Museum of Qatar",
+    "Villaggio Mall Shopping",
+    "Desert Safari Adventure",
+    "Falcon Souq Visit",
+    "Local Qatari Cuisine Experience",
+    "Aspire Park Stroll",
+    "Al Zubarah Fort Day Trip",
+    "MIA Park Activities",
+    "Doha Festival City Mall",
+    "Msheireb Downtown Cultural Walk"
+],
+"Dubai": [
+    "Burj Khalifa Observation Deck",
+    "Desert Safari Adventure",
+    "Dubai Mall Shopping",
+    "Dubai Marina Cruise",
+    "Palm Jumeirah Visit",
+    "Dubai Fountain Show",
+    "Ski Dubai Experience",
+    "Gold Souk Shopping",
+    "Global Village Tour",
+    "Atlantis Aquaventure Waterpark",
+    "Dubai Frame Visit",
+    "Jumeirah Mosque Tour",
+    "Al Fahidi Historical District Walk",
+    "IMG Worlds of Adventure",
+    "La Mer Beach Day"
+],
+
+
+  "Hong Kong": [
+    "Victoria Peak Tram Ride",
+    "Big Buddha at Lantau Island",
+    "Hong Kong Disneyland",
+    "Temple Street Night Market",
+    "Star Ferry Harbor Ride",
+    "Ocean Park Hong Kong",
+    "Ladies Market Shopping",
+    "Ngong Ping Cable Car",
+    "Man Mo Temple Visit",
+    "Symphony of Lights Show"
+  ],
+  "Istanbul": [
+    "Hagia Sophia Tour",
+    "Blue Mosque Visit",
+    "Topkapi Palace Exploration",
+    "Grand Bazaar Shopping",
+    "Spice Bazaar Tour",
+    "Bosphorus Cruise",
+    "Galata Tower View",
+    "Dolmabahce Palace",
+    "Turkish Hammam Experience",
+    "Local Street Food Walk"
+  ],
+  "Kuala Lumpur": [
+    "Petronas Twin Towers View",
+    "Batu Caves Visit",
+    "Merdeka Square Walk",
+    "KL Tower Observation Deck",
+    "Chinatown Market Tour",
+    "Central Market Shopping",
+    "Sunway Lagoon Theme Park",
+    "Islamic Arts Museum",
+    "Jalan Alor Night Food Street",
+    "Perdana Botanical Gardens"
+  ],
+  "Lisbon": [
+    "Belém Tower Tour",
+    "Jerónimos Monastery Visit",
+    "Tram 28 Ride",
+    "Alfama District Walk",
+    "São Jorge Castle",
+    "Lisbon Oceanarium",
+    "Time Out Market Food Tour",
+    "Rossio Square Exploration",
+    "Fado Music Night",
+    "Shopping at Chiado"
+  ],
+  "London": [
+    "London Eye Ride",
+    "Big Ben and Houses of Parliament",
+    "Tower of London Tour",
+    "British Museum Visit",
+    "Buckingham Palace Changing of Guards",
+    "Trafalgar Square Walk",
+    "Oxford Street Shopping",
+    "Thames River Cruise",
+    "West End Theatre Show",
+    "St. Paul’s Cathedral Tour"
+  ],
+  "Los Angeles": [
+    "Hollywood Walk of Fame",
+    "Universal Studios Tour",
+    "Santa Monica Beach Day",
+    "Griffith Observatory View",
+    "Rodeo Drive Shopping",
+    "Hollywood Sign Hike",
+    "Getty Center Museum",
+    "Venice Beach Walk",
+    "Los Angeles County Museum of Art",
+    "Disneyland Park"
+  ],
+  "Maldives": [
+    "Snorkeling Adventure",
+    "Scuba Diving Experience",
+    "Private Beach Picnic",
+    "Sunset Cruise",
+    "Resort Island Tour",
+    "Underwater Restaurant Dining",
+    "Fishing Trip",
+    "Local Island Exploration",
+    "Spa by the Beach",
+    "Water Sports Activities"
+  ],
+  "Mexico City": [
+    "Zócalo Square Walk",
+    "Frida Kahlo Museum Visit",
+    "Chapultepec Castle",
+    "Teotihuacan Pyramids Tour",
+    "National Museum of Anthropology",
+    "Xochimilco Boat Ride",
+    "Palacio de Bellas Artes",
+    "Street Food Tasting",
+    "Metropolitan Cathedral",
+    "Shopping at La Ciudadela"
+  ],
+  "Moscow": [
+    "Red Square Walk",
+    "Kremlin Tour",
+    "Saint Basil’s Cathedral",
+    "Bolshoi Theatre Show",
+    "GUM Mall Shopping",
+    "Moscow Metro Tour",
+    "Tretyakov Gallery Visit",
+    "Lenin’s Mausoleum",
+    "Victory Park Walk",
+    "River Cruise on Moskva"
+  ],
+  "New York": [
+    "Statue of Liberty Tour",
+    "Times Square Visit",
+    "Central Park Walk",
+    "Empire State Building View",
+    "Metropolitan Museum of Art",
+    "Broadway Show",
+    "Brooklyn Bridge Walk",
+    "9/11 Memorial & Museum",
+    "Fifth Avenue Shopping",
+    "Rockefeller Center Tour"
+  ],
+  "Ontario": [
+    "Niagara Falls Tour",
+    "CN Tower Toronto",
+    "Royal Ontario Museum",
+    "Ripley’s Aquarium Visit",
+    "Casa Loma Castle",
+    "Toronto Islands Ferry",
+    "St. Lawrence Market",
+    "Ontario Science Centre",
+    "Art Gallery of Ontario",
+    "Shopping at Eaton Centre"
+  ],
+  "Paris": [
+    "Eiffel Tower Visit",
+    "Louvre Museum Tour",
+    "Seine River Cruise",
+    "Notre Dame Cathedral",
+    "Champs-Élysées Walk",
+    "Arc de Triomphe Tour",
+    "Montmartre Exploration",
+    "Versailles Palace Day Trip",
+    "Luxembourg Gardens Picnic",
+    "Local Café and Wine Experience"
+  ],
+  "Rio de Janeiro": [
+    "Christ the Redeemer Statue",
+    "Sugarloaf Mountain Cable Car",
+    "Copacabana Beach Day",
+    "Ipanema Beach Walk",
+    "Maracanã Stadium Tour",
+    "Sambadrome Visit",
+    "Santa Teresa Neighborhood",
+    "Tijuca National Park",
+    "Carnival Parade Experience",
+    "Lapa Arches Nightlife"
+  ],
+  "Rome": [
+    "Colosseum Tour",
+    "Roman Forum Walk",
+    "Vatican Museums Visit",
+    "St. Peter’s Basilica",
+    "Trevi Fountain",
+    "Pantheon Tour",
+    "Piazza Navona Walk",
+    "Spanish Steps",
+    "Trastevere Neighborhood",
+    "Gelato Tasting"
+  ],
+  "San Francisco": [
+    "Golden Gate Bridge Walk",
+    "Alcatraz Island Tour",
+    "Fisherman’s Wharf Visit",
+    "Pier 39 Sea Lions",
+    "Cable Car Ride",
+    "Chinatown Exploration",
+    "Lombard Street Walk",
+    "Golden Gate Park Picnic",
+    "Exploratorium Visit",
+    "Shopping at Union Square"
+  ],
+  "Seoul": [
+    "Gyeongbokgung Palace Tour",
+    "Bukchon Hanok Village Walk",
+    "Myeongdong Shopping",
+    "N Seoul Tower View",
+    "Changdeokgung Palace",
+    "Insadong Cultural Street",
+    "Korean Street Food Tour",
+    "Dongdaemun Night Market",
+    "Lotte World Theme Park",
+    "Han River Cruise"
+  ],
+  "Singapore": [
+    "Marina Bay Sands SkyPark",
+    "Gardens by the Bay",
+    "Sentosa Island Day Trip",
+    "Singapore Flyer Ride",
+    "Chinatown Street Market",
+    "Little India Visit",
+    "Universal Studios Singapore",
+    "Orchard Road Shopping",
+    "Night Safari Experience",
+    "Clarke Quay Nightlife"
+  ],
+  "Surrey": [
+    "Bear Creek Park Walk",
+    "Historic Stewart Farm",
+    "Surrey Museum Visit",
+    "Fleetwood Park",
+    "Tynehead Regional Park",
+    "Guildford Town Centre Shopping",
+    "Fraser River Walk",
+    "Green Timbers Urban Forest",
+    "Surrey Art Gallery",
+    "Local Food Tour"
+  ],
+  "Sydney": [
+    "Sydney Opera House Tour",
+    "Harbour Bridge Climb",
+    "Bondi Beach Day",
+    "Darling Harbour Walk",
+    "Taronga Zoo Visit",
+    "Royal Botanic Garden",
+    "Ferry to Manly Beach",
+    "The Rocks Historic Area",
+    "Sea Life Aquarium",
+    "Shopping at Pitt Street Mall"
+  ],
+  "Switzerland": [
+    "Matterhorn Mountain Tour",
+    "Lake Geneva Cruise",
+    "Interlaken Adventure Sports",
+    "Jungfraujoch Top of Europe",
+    "Rhine Falls Visit",
+    "Chapel Bridge Lucerne",
+    "Bern Old Town Walk",
+    "Swiss Chocolate Tasting",
+    "Glacier Express Train Ride",
+    "Local Cheese Fondue Experience"
+  ],
+  "Tokyo": [
+    "Tokyo Tower Visit",
+    "Shibuya Crossing Experience",
+    "Senso-ji Temple Asakusa",
+    "Tokyo Disneyland",
+    "Meiji Shrine Tour",
+    "Tsukiji Fish Market",
+    "Akihabara Gaming Street",
+    "Odaiba Waterfront",
+    "Ueno Park and Zoo",
+    "Shopping at Shinjuku"
+  ],
+  "Vienna": [
+    "Schönbrunn Palace Tour",
+    "St. Stephen’s Cathedral",
+    "Belvedere Palace",
+    "Vienna State Opera",
+    "Prater Amusement Park",
+    "Kunsthistorisches Museum",
+    "Naschmarkt Food Tour",
+    "Hofburg Palace",
+    "Albertina Museum",
+    "Danube River Cruise"
   ]
 };
 
@@ -713,10 +1169,10 @@
     let { destination, days, people } = tripData;
     let activities = activitiesList[destination];
 
-    if (!activities) {
-        container.innerHTML = `<p>❌ Destination "${destination}" not valid. Please go back and choose a valid one!</p>`;
-        return;
-    }
+    // if (!activities) {
+    //     container.innerHTML = `<p>❌ Destination "${destination}" not valid. Please go back and choose a valid one!</p>`;
+    //     return;
+    // }
 
    const internationalCostsUSD = {
     "Dubai": 2000,
