add changes places list

--- a/project.html
+++ b/project.html
@@ -44,8 +44,9 @@
   <option value="" disabled selected>Choose destination</option>
   
   <!-- Indian Destinations -->
-  <option disabled>──Indian Destinations ──</option>
-  <option value="Agra">Agra</option>
+   
+<option disabled>──Indian Destinations ──</option>
+<option value="Agra">Agra</option>
 <option value="Ahmedabad">Ahmedabad</option>
 <option value="Amritsar">Amritsar</option>
 <option value="Aurangabad">Aurangabad</option>
@@ -127,7 +128,7 @@
   <section class="about">
     <h2>Why Choose Plan & Go?</h2>
     <p>Plan & Go helps you create personalized travel plans, track expenses, check weather forecasts, 
-    and share your experience with friends. Our simple design makes travel planning smooth and fun!</p>
+    and share your trips with friends. Our simple design makes travel planning smooth and fun!</p>
 
     <div class="features">
       <a href="http://127.0.0.1:5501/aboutus.html" class="card"> 👥 About us </a>
