--- a/trip-schedule.html
+++ b/trip-schedule.html
@@ -42,6 +42,8 @@
   color: #2A7B9B;
   letter-spacing: 1px;
     }
+
+    
     /* Glassmorphism effect for trip container */
     .container {
       max-width: 900px;
@@ -697,6 +699,123 @@
     "Nepali Temple Visit",
     "Ayurvedic Healing Session"
   ],
+  "Vizag": [
+  "Rishikonda Beach Water Sports",
+  "Kailasagiri Hill Park Visit",
+  "Submarine Museum Exploration",
+  "INS Kurusura Museum Tour",
+  "Simhachalam Temple Visit",
+  "Borra Caves Day Trip",
+  "Araku Valley Excursion",
+  "Coffee Plantation Tour",
+  "Dolphin Watching at Rushikonda",
+  "Thotlakonda Buddhist Site Visit",
+  "Rushikonda Beach Relaxing",
+  "Ross Hill Viewpoint Photography",
+  "Local Andhra Cuisine Tasting",
+  "Indira Gandhi Zoological Park Visit",
+  "Tenneti Park Sunset Walk",
+  "Alakolam Reservoir Exploration",
+  "Handicraft Shopping at Local Markets",
+  "VUDA Park Stroll",
+  "Kambalakonda Wildlife Sanctuary Trek",
+  "Yoga & Meditation by the Beach"
+],
+"Coorg": [
+  "Abbey Falls Visit",
+  "Dubare Elephant Camp Experience",
+  "Raja’s Seat Sunset View",
+  "Madikeri Fort Exploration",
+  "Talakaveri Temple Visit",
+  "Coffee Plantation Tour",
+  "Nisargadhama Island Walk",
+  "Iruppu Falls Trek",
+  "Omkareshwara Temple Visit",
+  "Bylekuppe Tibetan Monastery",
+  "Pushpagiri Wildlife Sanctuary Trek",
+  "Cauvery Nisargadhama Nature Walk",
+  "Local Coorg Cuisine Tasting",
+  "Mallalli Falls Excursion",
+  "Chelavara Falls Photography",
+  "River Rafting in Barapole",
+  "Shopping for Coorg Honey & Spices",
+  "Trekking in Brahmagiri Hills",
+  "Kodagu Heritage Museum Tour",
+  "Chiklihole Reservoir Visit"
+],
+"Hyderabad": [
+  "Charminar Visit",
+  "Golconda Fort Tour",
+  "Hussain Sagar Lake Boating",
+  "Ramoji Film City Exploration",
+  "Salar Jung Museum Visit",
+  "Chowmahalla Palace Tour",
+  "Birla Mandir Visit",
+  "Laad Bazaar Shopping",
+  "Mecca Masjid Photography",
+  "Necklace Road Evening Walk",
+  "Qutb Shahi Tombs Visit",
+  "Shilparamam Cultural Village",
+  "Hitech City Sightseeing",
+  "Falaknuma Palace Tour",
+  "Nehru Zoological Park Visit",
+  "Local Hyderabadi Biryani Tasting",
+  "Lumbini Park Laser Show",
+  "Snow World Amusement Visit",
+  "Taramati Baradari Cultural Show",
+  "Shopping for Pearls & Handicrafts"
+],
+
+"Jodhpur": [
+  "Mehrangarh Fort Visit",
+  "Umaid Bhawan Palace Tour",
+  "Jaswant Thada Memorial",
+  "Clock Tower & Sardar Market",
+  "Mandore Gardens Exploration",
+  "Toorji Ka Jhalra Stepwell",
+  "Rao Jodha Desert Rock Park",
+  "Local Rajasthani Street Food Tasting",
+  "Flying Fox Adventure",
+  "Kaylana Lake Visit",
+  "Stepwell Photography",
+  "Cultural Folk Music & Dance Show",
+  "Shopping for Bandhani & Rajasthani Crafts",
+  "Chamunda Mata Temple Visit",
+  "Balsamand Lake Excursion",
+  "Heritage Walk of Old Jodhpur",
+  "Local Sweet Shops Exploration",
+  "Cooking Class: Rajasthani Cuisine",
+  "Zipline over Mehrangarh Fort",
+  "Rajasthan Miniature Art Workshop"
+],
+
+"Mount Abu": [
+  "Dilwara Temples Visit",
+  "Nakki Lake Boating",
+  "Sunset Point Photography",
+  "Mount Abu Wildlife Sanctuary Trek",
+  "Achalgarh Fort Exploration",
+  "Guru Shikhar Peak Visit",
+  "Toad Rock Hike",
+  "Peace Park Stroll",
+  "Trevor’s Tank Bird Watching",
+  "Achalgarh Jain Temples Visit",
+  "Vintage Car Museum Tour",
+  "Mount Abu Observatory Visit",
+  "Local Rajasthani Handicraft Shopping",
+  "Sunrise from Honeymoon Point",
+  "Brahma Kumaris Spiritual Tour",
+  "Mount Abu Rose Garden Walk",
+  "Local Cuisine Tasting",
+  "Hiking in Aravalli Hills",
+  "Mount Abu Market Shopping",
+  "Camping Near Sunset Point"
+],
+
+
+
+
+
 
   // International trips 
 
@@ -899,9 +1018,14 @@
     "Ladies Market Shopping",
     "Ngong Ping Cable Car",
     "Man Mo Temple Visit",
-    "Symphony of Lights Show"
-  ],
-  "Istanbul": [
+    "Symphony of Lights Show",
+    "Sky100 Observation Deck",
+    "Tsim Sha Tsui Promenade",
+    "Repulse Bay Beach",
+    "Hong Kong Museum of History",
+    "Dragon’s Back Hiking Trail"
+],
+"Istanbul": [
     "Hagia Sophia Tour",
     "Blue Mosque Visit",
     "Topkapi Palace Exploration",
@@ -911,9 +1035,14 @@
     "Galata Tower View",
     "Dolmabahce Palace",
     "Turkish Hammam Experience",
-    "Local Street Food Walk"
-  ],
-  "Kuala Lumpur": [
+    "Local Street Food Walk",
+    "Süleymaniye Mosque Visit",
+    "Chora Church Exploration",
+    "Istanbul Modern Art Museum",
+    "Pierre Loti Café Sunset",
+    "Istiklal Street Night Walk"
+],
+"Kuala Lumpur": [
     "Petronas Twin Towers View",
     "Batu Caves Visit",
     "Merdeka Square Walk",
@@ -923,9 +1052,14 @@
     "Sunway Lagoon Theme Park",
     "Islamic Arts Museum",
     "Jalan Alor Night Food Street",
-    "Perdana Botanical Gardens"
-  ],
-  "Lisbon": [
+    "Perdana Botanical Gardens",
+    "Bukit Bintang Shopping",
+    "Thean Hou Temple Visit",
+    "KL Bird Park",
+    "Aquaria KLCC",
+    "Little India Brickfields Tour"
+],
+"Lisbon": [
     "Belém Tower Tour",
     "Jerónimos Monastery Visit",
     "Tram 28 Ride",
@@ -935,9 +1069,14 @@
     "Time Out Market Food Tour",
     "Rossio Square Exploration",
     "Fado Music Night",
-    "Shopping at Chiado"
-  ],
-  "London": [
+    "Shopping at Chiado",
+    "MAAT Museum Visit",
+    "LX Factory Tour",
+    "Gulbenkian Museum",
+    "Elevador de Santa Justa Ride",
+    "Cascais Day Trip"
+],
+"London": [
     "London Eye Ride",
     "Big Ben and Houses of Parliament",
     "Tower of London Tour",
@@ -947,9 +1086,14 @@
     "Oxford Street Shopping",
     "Thames River Cruise",
     "West End Theatre Show",
-    "St. Paul’s Cathedral Tour"
-  ],
-  "Los Angeles": [
+    "St. Paul’s Cathedral Tour",
+    "Camden Market Exploration",
+    "Hyde Park Walk",
+    "Natural History Museum",
+    "Kew Gardens Visit",
+    "Greenwich Observatory"
+],
+"Los Angeles": [
     "Hollywood Walk of Fame",
     "Universal Studios Tour",
     "Santa Monica Beach Day",
@@ -959,9 +1103,14 @@
     "Getty Center Museum",
     "Venice Beach Walk",
     "Los Angeles County Museum of Art",
-    "Disneyland Park"
-  ],
-  "Maldives": [
+    "Disneyland Park",
+    "La Brea Tar Pits Visit",
+    "The Broad Museum",
+    "Warner Bros. Studio Tour",
+    "Runyon Canyon Hike",
+    "El Matador Beach Day"
+],
+"Maldives": [
     "Snorkeling Adventure",
     "Scuba Diving Experience",
     "Private Beach Picnic",
@@ -971,9 +1120,14 @@
     "Fishing Trip",
     "Local Island Exploration",
     "Spa by the Beach",
-    "Water Sports Activities"
-  ],
-  "Mexico City": [
+    "Water Sports Activities",
+    "Dolphin Watching Cruise",
+    "Sandbank Day Trip",
+    "Local Handicraft Market Visit",
+    "Island Hopping Tour",
+    "Yoga on the Beach"
+],
+"Mexico City": [
     "Zócalo Square Walk",
     "Frida Kahlo Museum Visit",
     "Chapultepec Castle",
@@ -983,9 +1137,14 @@
     "Palacio de Bellas Artes",
     "Street Food Tasting",
     "Metropolitan Cathedral",
-    "Shopping at La Ciudadela"
-  ],
-  "Moscow": [
+    "Shopping at La Ciudadela",
+    "Roma and Condesa Neighborhood Walk",
+    "Templo Mayor Ruins",
+    "Coyoacán Market Tour",
+    "Chapultepec Park Picnic",
+    "Lucha Libre Wrestling Show"
+],
+"Moscow": [
     "Red Square Walk",
     "Kremlin Tour",
     "Saint Basil’s Cathedral",
@@ -995,9 +1154,14 @@
     "Tretyakov Gallery Visit",
     "Lenin’s Mausoleum",
     "Victory Park Walk",
-    "River Cruise on Moskva"
-  ],
-  "New York": [
+    "River Cruise on Moskva",
+    "Novodevichy Convent Visit",
+    "Arbat Street Walk",
+    "Izmailovo Market Shopping",
+    "Cosmonautics Museum",
+    "Zaryadye Park Exploration"
+],
+"New York": [
     "Statue of Liberty Tour",
     "Times Square Visit",
     "Central Park Walk",
@@ -1007,9 +1171,14 @@
     "Brooklyn Bridge Walk",
     "9/11 Memorial & Museum",
     "Fifth Avenue Shopping",
-    "Rockefeller Center Tour"
-  ],
-  "Ontario": [
+    "Rockefeller Center Tour",
+    "High Line Park Walk",
+    "One World Observatory",
+    "Chelsea Market Food Tour",
+    "Museum of Modern Art (MoMA)",
+    "Coney Island Boardwalk"
+],
+"Ontario": [
     "Niagara Falls Tour",
     "CN Tower Toronto",
     "Royal Ontario Museum",
@@ -1019,9 +1188,14 @@
     "St. Lawrence Market",
     "Ontario Science Centre",
     "Art Gallery of Ontario",
-    "Shopping at Eaton Centre"
-  ],
-  "Paris": [
+    "Shopping at Eaton Centre",
+    "Distillery District Walk",
+    "High Park Stroll",
+    "Toronto Zoo Visit",
+    "Harbourfront Centre Activities",
+    "Bata Shoe Museum Visit"
+],
+"Paris": [
     "Eiffel Tower Visit",
     "Louvre Museum Tour",
     "Seine River Cruise",
@@ -1031,9 +1205,14 @@
     "Montmartre Exploration",
     "Versailles Palace Day Trip",
     "Luxembourg Gardens Picnic",
-    "Local Café and Wine Experience"
-  ],
-  "Rio de Janeiro": [
+    "Local Café and Wine Experience",
+    "Musée d'Orsay Visit",
+    "Sainte-Chapelle Tour",
+    "Père Lachaise Cemetery Walk",
+    "Latin Quarter Exploration",
+    "Pont Alexandre III Photo Spot"
+],
+"Rio de Janeiro": [
     "Christ the Redeemer Statue",
     "Sugarloaf Mountain Cable Car",
     "Copacabana Beach Day",
@@ -1043,9 +1222,14 @@
     "Santa Teresa Neighborhood",
     "Tijuca National Park",
     "Carnival Parade Experience",
-    "Lapa Arches Nightlife"
-  ],
-  "Rome": [
+    "Lapa Arches Nightlife",
+    "Selarón Steps Visit",
+    "Botanical Garden Stroll",
+    "Petropolis Day Trip",
+    "Favela Tour",
+    "Hang Gliding over Rio"
+],
+"Rome": [
     "Colosseum Tour",
     "Roman Forum Walk",
     "Vatican Museums Visit",
@@ -1055,9 +1239,14 @@
     "Piazza Navona Walk",
     "Spanish Steps",
     "Trastevere Neighborhood",
-    "Gelato Tasting"
-  ],
-  "San Francisco": [
+    "Gelato Tasting",
+    "Castel Sant’Angelo Visit",
+    "Borghese Gallery Tour",
+    "Campo de’ Fiori Market",
+    "Appian Way Cycling",
+    "Testaccio Food Tour"
+],
+"San Francisco": [
     "Golden Gate Bridge Walk",
     "Alcatraz Island Tour",
     "Fisherman’s Wharf Visit",
@@ -1067,9 +1256,14 @@
     "Lombard Street Walk",
     "Golden Gate Park Picnic",
     "Exploratorium Visit",
-    "Shopping at Union Square"
-  ],
-  "Seoul": [
+    "Shopping at Union Square",
+    "Palace of Fine Arts Visit",
+    "Coit Tower View",
+    "Mission District Murals",
+    "Sausalito Day Trip",
+    "Twin Peaks Sunset View"
+],
+"Seoul": [
     "Gyeongbokgung Palace Tour",
     "Bukchon Hanok Village Walk",
     "Myeongdong Shopping",
@@ -1079,9 +1273,14 @@
     "Korean Street Food Tour",
     "Dongdaemun Night Market",
     "Lotte World Theme Park",
-    "Han River Cruise"
-  ],
-  "Singapore": [
+    "Han River Cruise",
+    "Bongeunsa Temple Visit",
+    "Hongdae Art Street",
+    "Seoul Forest Stroll",
+    "Cheonggyecheon Stream Walk",
+    "K-Pop Concert or Experience"
+],
+"Singapore": [
     "Marina Bay Sands SkyPark",
     "Gardens by the Bay",
     "Sentosa Island Day Trip",
@@ -1091,9 +1290,14 @@
     "Universal Studios Singapore",
     "Orchard Road Shopping",
     "Night Safari Experience",
-    "Clarke Quay Nightlife"
-  ],
-  "Surrey": [
+    "Clarke Quay Nightlife",
+    "Botanic Gardens Walk",
+    "Haw Par Villa Exploration",
+    "Jewel Changi Airport",
+    "Esplanade Outdoor Concert",
+    "Pulau Ubin Cycling Tour"
+],
+"Surrey": [
     "Bear Creek Park Walk",
     "Historic Stewart Farm",
     "Surrey Museum Visit",
@@ -1103,9 +1307,14 @@
     "Fraser River Walk",
     "Green Timbers Urban Forest",
     "Surrey Art Gallery",
-    "Local Food Tour"
-  ],
-  "Sydney": [
+    "Local Food Tour",
+    "Crescent Beach Visit",
+    "Harrison Park Stroll",
+    "Bear Creek Dog Off-Leash Area",
+    "White Rock Pier Visit",
+    "Serpentine Fen Nature Reserve"
+],
+"Sydney": [
     "Sydney Opera House Tour",
     "Harbour Bridge Climb",
     "Bondi Beach Day",
@@ -1115,9 +1324,14 @@
     "Ferry to Manly Beach",
     "The Rocks Historic Area",
     "Sea Life Aquarium",
-    "Shopping at Pitt Street Mall"
-  ],
-  "Switzerland": [
+    "Shopping at Pitt Street Mall",
+    "Art Gallery of New South Wales",
+    "Coogee to Bondi Coastal Walk",
+    "Sydney Tower Eye Observation",
+    "Watsons Bay Ferry and Fish & Chips",
+    "Blue Mountains Day Trip"
+],
+"Switzerland": [
     "Matterhorn Mountain Tour",
     "Lake Geneva Cruise",
     "Interlaken Adventure Sports",
@@ -1127,9 +1341,14 @@
     "Bern Old Town Walk",
     "Swiss Chocolate Tasting",
     "Glacier Express Train Ride",
-    "Local Cheese Fondue Experience"
-  ],
-  "Tokyo": [
+    "Local Cheese Fondue Experience",
+    "Zurich Old Town Exploration",
+    "Montreux Lakeside Walk",
+    "Zermatt Skiing Adventure",
+    "Lausanne Olympic Museum Visit",
+    "Appenzell Village Tour"
+],
+"Tokyo": [
     "Tokyo Tower Visit",
     "Shibuya Crossing Experience",
     "Senso-ji Temple Asakusa",
@@ -1139,9 +1358,14 @@
     "Akihabara Gaming Street",
     "Odaiba Waterfront",
     "Ueno Park and Zoo",
-    "Shopping at Shinjuku"
-  ],
-  "Vienna": [
+    "Shopping at Shinjuku",
+    "Ginza Shopping District",
+    "Roppongi Hills Observation Deck",
+    "TeamLab Borderless Museum",
+    "Harajuku Takeshita Street",
+    "Sumida Aquarium"
+],
+"Vienna": [
     "Schönbrunn Palace Tour",
     "St. Stephen’s Cathedral",
     "Belvedere Palace",
@@ -1151,10 +1375,14 @@
     "Naschmarkt Food Tour",
     "Hofburg Palace",
     "Albertina Museum",
-    "Danube River Cruise"
-  ]
-};
-
+    "Danube River Cruise",
+    "Hundertwasserhaus Visit",
+    "Vienna Zoo (Tiergarten Schönbrunn)",
+    "Spanish Riding School Show",
+    "Museum of Fine Arts",
+    "Coffeehouse Experience at Café Central"
+]
+  };
 
 
   function generateTrip() {
