--- a/trip-schedule.html
+++ b/trip-schedule.html
@@ -811,10 +811,28 @@
   "Mount Abu Market Shopping",
   "Camping Near Sunset Point"
 ],
-
-
-
-
+"Ooty": [
+  "Ooty Botanical Gardens Visit",
+  "Ooty Lake Boating",
+  "Doddabetta Peak Trek",
+  "Nilgiri Mountain Railway Ride",
+  "Rose Garden Photography",
+  "Tea Factory & Museum Tour",
+  "Emerald Lake Exploration",
+  "Pykara Waterfalls Visit",
+  "St. Stephen’s Church Visit",
+  "Thread Garden Stroll",
+  "Shopping at Charing Cross Market",
+  "Nilgiri Hills Trekking",
+  "Avalanche Lake Excursion",
+  "Mudumalai Wildlife Safari",
+  "Local Tamil Nadu Cuisine Tasting",
+  "Coonoor Day Trip",
+  "Skiing at Ooty Snow Park (seasonal)",
+  "Botanical Research Center Visit",
+  "Horse Riding at Ooty Lake",
+  "Photography of Tea Estates"
+],
 
 
   // International trips 
