login-signup changes

--- a/project.html
+++ b/project.html
@@ -17,7 +17,6 @@
     </video>
   </div>
 
-
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo">Plan & Go ✈</div>
@@ -40,83 +39,78 @@
       <input type="date" id="endDate">
 
       <label for="destinationSelect"></label>
-<select id="destinationSelect">
-  <option value="" disabled selected>Choose destination</option>
-  
-  <!-- Indian Destinations -->
-   
-<option disabled>──Indian Destinations ──</option>
-<option value="Agra">Agra</option>
-<option value="Ahmedabad">Ahmedabad</option>
-<option value="Amritsar">Amritsar</option>
-<option value="Aurangabad">Aurangabad</option>
-<option value="Bathinda">Bathinda</option>
-<option value="Chandigarh">Chandigarh</option>
-<option value="Chennai">Chennai</option>
-<option value="Coorg">Coorg</option>
-<option value="Darjeeling">Darjeeling</option>
-<option value="Delhi">Delhi</option>
-<option value="Goa">Goa</option>
-<option value="Hyderabad">Hyderabad</option>
-<option value="Jaipur">Jaipur</option>
-<option value="Jaisalmer">Jaisalmer</option>
-<option value="Jodhpur">Jodhpur</option>
-<option value="Kashmir">Kashmir</option>
-<option value="Kaziranga">Kaziranga</option>
-<option value="Kochi">Kochi</option>
-<option value="Kolkata">Kolkata</option>
-<option value="Leh Ladakh">Leh Ladakh</option>
-<option value="Manali">Manali</option>
-<option value="Mount Abu">Mount Abu</option>
-<option value="Mumbai">Mumbai</option>
-<option value="Mysore">Mysore</option>
-<option value="Ooty">Ooty</option>
-<option value="Pune">Pune</option>
-<option value="Rishikesh">Rishikesh</option>
-<option value="Shillong">Shillong</option>
-<option value="Shimla">Shimla</option>
-<option value="Udaipur">Udaipur</option>
-<option value="Varanasi">Varanasi</option>
-<option value="Vizag">Vizag (Visakhapatnam)</option>
-
-
-  <!-- International Destinations -->
-  <option disabled>──International Destinations ──</option>
-  <option value="Amsterdam">Amsterdam (Netherlands)</option>
-  <option value="Athens">Athens (Greece)</option>
-  <option value="Bali">Bali (Indonesia)</option>
-  <option value="Bangkok">Bangkok (Thailand)</option>
-  <option value="Barcelona">Barcelona (Spain)</option>
-  <option value="Berlin">Berlin (Germany)</option>
-  <option value="Cairo">Cairo (Egypt)</option>
-  <option value="Calgary">Calgary (Canada)</option>
-  <option value="Cape Town">Cape Town (South Africa)</option>
-  <option value="Doha">Doha (Qatar)</option>
-  <option value="Dubai">Dubai (UAE)</option>
-  <option value="Hong Kong">Hong Kong (China)</option>
-  <option value="Istanbul">Istanbul (Turkey)</option>
-  <option value="Kuala Lumpur">Kuala Lumpur (Malaysia)</option>
-  <option value="Lisbon">Lisbon (Portugal)</option>
-  <option value="London">London (UK)</option>
-  <option value="Los Angeles">Los Angeles (USA)</option>
-  <option value="Maldives">Maldives (Maldives)</option>
-  <option value="Mexico City">Mexico City (Mexico)</option>
-  <option value="Moscow">Moscow (Russia)</option>
-  <option value="New York">New York (USA)</option>
-  <option value="Ontario">Ontario (Canada)</option>
-  <option value="Paris">Paris (France)</option>
-  <option value="Rio de Janeiro">Rio de Janeiro (Brazil)</option>
-  <option value="Rome">Rome (Italy)</option>
-  <option value="San Francisco">San Francisco (USA)</option>
-  <option value="Seoul">Seoul (South Korea)</option>
-  <option value="Singapore">Singapore (Singapore)</option>
-  <option value="Surrey">Surrey (Canada)</option>
-  <option value="Sydney">Sydney (Australia)</option>
-  <option value="Switzerland">Switzerland (Switzerland)</option>
-  <option value="Tokyo">Tokyo (Japan)</option>
-  <option value="Vienna">Vienna (Austria)</option>
-</select>
-
+      <select id="destinationSelect">
+        <option value="" disabled selected>Choose destination</option>
+        <!-- Indian Destinations -->
+        <option disabled>──Indian Destinations ──</option>
+        <option value="Agra">Agra</option>
+        <option value="Ahmedabad">Ahmedabad</option>
+        <option value="Amritsar">Amritsar</option>
+        <option value="Aurangabad">Aurangabad</option>
+        <option value="Bathinda">Bathinda</option>
+        <option value="Chandigarh">Chandigarh</option>
+        <option value="Chennai">Chennai</option>
+        <option value="Coorg">Coorg</option>
+        <option value="Darjeeling">Darjeeling</option>
+        <option value="Delhi">Delhi</option>
+        <option value="Goa">Goa</option>
+        <option value="Hyderabad">Hyderabad</option>
+        <option value="Jaipur">Jaipur</option>
+        <option value="Jaisalmer">Jaisalmer</option>
+        <option value="Jodhpur">Jodhpur</option>
+        <option value="Kashmir">Kashmir</option>
+        <option value="Kaziranga">Kaziranga</option>
+        <option value="Kochi">Kochi</option>
+        <option value="Kolkata">Kolkata</option>
+        <option value="Leh Ladakh">Leh Ladakh</option>
+        <option value="Manali">Manali</option>
+        <option value="Mount Abu">Mount Abu</option>
+        <option value="Mumbai">Mumbai</option>
+        <option value="Mysore">Mysore</option>
+        <option value="Ooty">Ooty</option>
+        <option value="Pune">Pune</option>
+        <option value="Rishikesh">Rishikesh</option>
+        <option value="Shillong">Shillong</option>
+        <option value="Shimla">Shimla</option>
+        <option value="Udaipur">Udaipur</option>
+        <option value="Varanasi">Varanasi</option>
+        <option value="Vizag">Vizag (Visakhapatnam)</option>
+        <!-- International Destinations -->
+        <option disabled>──International Destinations ──</option>
+        <option value="Amsterdam">Amsterdam (Netherlands)</option>
+        <option value="Athens">Athens (Greece)</option>
+        <option value="Bali">Bali (Indonesia)</option>
+        <option value="Bangkok">Bangkok (Thailand)</option>
+        <option value="Barcelona">Barcelona (Spain)</option>
+        <option value="Berlin">Berlin (Germany)</option>
+        <option value="Cairo">Cairo (Egypt)</option>
+        <option value="Calgary">Calgary (Canada)</option>
+        <option value="Cape Town">Cape Town (South Africa)</option>
+        <option value="Doha">Doha (Qatar)</option>
+        <option value="Dubai">Dubai (UAE)</option>
+        <option value="Hong Kong">Hong Kong (China)</option>
+        <option value="Istanbul">Istanbul (Turkey)</option>
+        <option value="Kuala Lumpur">Kuala Lumpur (Malaysia)</option>
+        <option value="Lisbon">Lisbon (Portugal)</option>
+        <option value="London">London (UK)</option>
+        <option value="Los Angeles">Los Angeles (USA)</option>
+        <option value="Maldives">Maldives (Maldives)</option>
+        <option value="Mexico City">Mexico City (Mexico)</option>
+        <option value="Moscow">Moscow (Russia)</option>
+        <option value="New York">New York (USA)</option>
+        <option value="Ontario">Ontario (Canada)</option>
+        <option value="Paris">Paris (France)</option>
+        <option value="Rio de Janeiro">Rio de Janeiro (Brazil)</option>
+        <option value="Rome">Rome (Italy)</option>
+        <option value="San Francisco">San Francisco (USA)</option>
+        <option value="Seoul">Seoul (South Korea)</option>
+        <option value="Singapore">Singapore (Singapore)</option>
+        <option value="Surrey">Surrey (Canada)</option>
+        <option value="Sydney">Sydney (Australia)</option>
+        <option value="Switzerland">Switzerland (Switzerland)</option>
+        <option value="Tokyo">Tokyo (Japan)</option>
+        <option value="Vienna">Vienna (Austria)</option>
+      </select>
 
       <input type="number" id="people" min="1" placeholder="Number of People">
 
@@ -133,7 +127,7 @@
     <div class="features">
       <a href="http://127.0.0.1:5501/aboutus.html" class="card"> 👥 About us </a>
       <div class="card">☀ Get Weather Updates</div>
-       <a href="http://127.0.0.1:5501/share-experience.html" class="card">🤝 Share Experience</a>
+      <a href="http://127.0.0.1:5501/share-experience.html" class="card">🤝 Share Experience</a>
     </div>
   </section>
 
@@ -172,12 +166,12 @@
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   // ✅ Navbar update if logged in
-  const user = JSON.parse(localStorage.getItem("loggedInUser"));
+  const user = localStorage.getItem("loggedInUser"); // string, not JSON
   const nav = document.getElementById("navbar-links");
 
   if (user) {
     nav.innerHTML = `
-      <span style="margin-right:10px;">👋 Hi, ${user.username}</span>
+      <span style="margin-right:10px;">👋 Hi, ${user}</span>
       <a href="#" id="logoutBtn">Logout</a>
     `;
     document.getElementById("logoutBtn").addEventListener("click", () => {
@@ -203,9 +197,10 @@ document.addEventListener("DOMContentLoaded", () => {
 
 // ✅ Trip planner function
 function planTrip() {
-  const user = JSON.parse(localStorage.getItem("loggedInUser"));
+  const user = localStorage.getItem("loggedInUser");
   if (!user) {
     alert("⚠️ Please login first!");
+    window.location.href = "login.html";
     return;
   }
 
