--- a/login.html
+++ b/login.html
@@ -1,10 +1,11 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <!-- <link rel="stylesheet" href="style.css"> -->
   <style>
     body {
       margin: 0;
@@ -15,7 +16,6 @@
       justify-content: center;
       align-items: center;
       overflow: hidden;
-      /* background removed */
     }
     .video-bg {
       position: fixed;
@@ -41,10 +41,6 @@
     h2 {
       margin-bottom: 10px;
       color: white;
-    }
-    p {
-      color: rgb(78, 70, 70);
-      margin-bottom: 20px;
     }
     input {
       width: 100%;
@@ -86,6 +82,7 @@
     <source src="login bg3.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
+
   <div class="container">
     <h2>Welcome back!</h2>
     <form id="loginForm">
@@ -97,28 +94,36 @@
   </div>
 
   <script>
-    const loginForm = document.getElementById("loginForm");
+    window.onload = () => {
+      const loginForm = document.getElementById("loginForm");
 
-    loginForm.addEventListener("submit", (e) => {
-      e.preventDefault();
+      loginForm.addEventListener("submit", (e) => {
+        e.preventDefault();
 
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
+        const email = document.getElementById("email").value.trim();
+        const password = document.getElementById("password").value.trim();
 
-      const savedEmail = localStorage.getItem("userEmail");
-      const savedPassword = localStorage.getItem("userPassword");
+        const savedEmail = localStorage.getItem("userEmail");
+        const savedPassword = localStorage.getItem("userPassword");
 
-      if (email === savedEmail && password === savedPassword) {
-        // 👇 Yeh add karo
-        const user = { username: email.split("@")[0], email: email };
-        localStorage.setItem("loggedInUser", JSON.stringify(user));
+        console.log("👉 Entered Email:", email);
+        console.log("👉 Saved Email:", savedEmail);
+        console.log("👉 Entered Password:", password);
+        console.log("👉 Saved Password:", savedPassword);
 
-        alert("🎉 Login Successful!");
-        window.location.href = "project.html"; 
-      } else {
-        alert("❌ Invalid Email or Password");
-      }
-    });
+     if (email === savedEmail && password === savedPassword) {
+  alert("🎉 Login Successful!");
+
+  // ✅ active user set karo
+  localStorage.setItem("loggedInUser", JSON.stringify({ email: savedEmail, username: savedUsername }));
+
+  window.location.href = "project.html";
+} else {
+  alert("❌ Invalid Email or Password");
+}
+
+      });
+    }
   </script>
 </body>
 </html>
