--- a/signup.html
+++ b/signup.html
@@ -1,10 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up</title>
-  <link rel="stylesheet" href="style.css">
   <style>
     body {
       margin: 0;
@@ -37,46 +37,23 @@
       box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
       z-index: 1;
     }
-    h2 {
-      margin-bottom: 10px;
-      color: white;
-    }
-    p {
-      color: rgb(78, 70, 70);
-      margin-bottom: 20px;
-    }
+    h2 { margin-bottom: 10px; color: white; }
+    p { color: rgb(78, 70, 70); margin-bottom: 20px; }
     input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: none;
-      outline: none;
-      border-radius: 8px;
-      font-size: 14px;
+      width: 100%; padding: 12px; margin: 10px 0;
+      border: none; outline: none;
+      border-radius: 8px; font-size: 14px;
     }
     button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 15px;
-      background: #00bfff;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
+      width: 100%; padding: 12px; margin-top: 15px;
+      background: #00bfff; color: white;
+      border: none; border-radius: 8px;
+      font-size: 16px; cursor: pointer;
       transition: 0.3s ease;
     }
-    button:hover {
-      background: #0099cc;
-    }
-    a {
-      color: grey;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+    button:hover { background: #0099cc; }
+    a { color: grey; text-decoration: none; font-weight: bold; }
+    a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
@@ -85,6 +62,7 @@
     <source src="login bg3.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
+
   <div class="container">
     <h2>Create Account</h2>
     <p>Fill details to start your journey </p>
@@ -107,6 +85,12 @@
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
 
+      // ✅ Password validation
+      if (password.length < 8 || (!password.includes("@") && !password.includes("#"))) {
+        alert("⚠️ Password must be at least 8 characters long and contain @ or #");
+        return;
+      }
+
       // Save user in localStorage
       localStorage.setItem("userFullName", fullname);
       localStorage.setItem("userEmail", email);
@@ -115,3 +99,6 @@
       alert("✅ Account Created Successfully! Now Login.");
       window.location.href = "login.html";
     });
+  </script>
+</body>
+</html>
